--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
+    "@prisma/extension-accelerate": "^1.2.2",
     "better-auth": "^1.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
